--- a/Src/Newtonsoft.Json/Newtonsoft.Json_Standard.csproj
+++ b/Src/Newtonsoft.Json/Newtonsoft.Json_Standard.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Newtonsoft.Json</AssemblyName>
     <RootNamespace>Newtonsoft.Json</RootNamespace>
+    <Version>7.0.3</Version>
+    <FileVersion>7.0.3.0</FileVersion>
   </PropertyGroup>
 
 
