--- a/Src/Newtonsoft.Json/Newtonsoft.Json_Standard.csproj
+++ b/Src/Newtonsoft.Json/Newtonsoft.Json_Standard.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <AssemblyName>Newtonsoft.Json</AssemblyName>
     <RootNamespace>Newtonsoft.Json</RootNamespace>
     <Version>7.0.3</Version>
